Fix light theme bug on mobile devices

--- a/client/src/components/ConversationsList/ConversationsList.scss
+++ b/client/src/components/ConversationsList/ConversationsList.scss
@@ -16,7 +16,6 @@
     top: 70px;
     left: 0;
     width: 100%;
-    background-color: $dark-color;
     z-index: 99;
     border: none;
     transition: all 0.3s ease-out;
